--- a/components/user-widget/user-widget.html
+++ b/components/user-widget/user-widget.html
@@ -23,6 +23,7 @@ e
 <link rel="import" href="../paper-item/paper-item.html">
 <link rel="import" href="../paper-badge/paper-badge.html">
 <link rel="import" href="../iron-list/iron-list.html">
+<link rel="import" href="../paper-dialog/paper-dialog.html">
 <link rel="import" href="../paper-dialog-scrollable/paper-dialog-scrollable.html">
   
 
