--- a/components/user-widget/user-widget.html
+++ b/components/user-widget/user-widget.html
@@ -248,6 +248,7 @@ Example:
       position: relative;
       padding: 1em;
       text-decoration: none;
+      color: #337ab7;
     }
 
         ul {
