--- a/components/las2peer-frontend-user-widget/demo/index.html
+++ b/components/las2peer-frontend-user-widget/demo/index.html
@@ -15,11 +15,12 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
     <title>comment-thread-widget Demo</title>
      <!-- import jQuery for AJAX calls (must) -->
+       <script src="../../webcomponentsjs/webcomponents-lite.min.js"></script>
   <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
 
   <!-- import Bootstrap for responsive UI (must) -->
   <script type="text/javascript" src="https://netdna.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
-    <link rel="import" href="../user-widget.html">
+    <link rel="import" href="../las2peer-frontend-user-widget.html">
   </head>
 <body unresolved>
   <!-- Note: if the main element for this repository doesn't
@@ -28,7 +29,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
        components you want documented. -->
        <h1><code>&lt;User-widget&gt;</code> Demo</h1>
 
- <div style="margin:15px;width:150px;"><div style="float:right"><p>Alice</p><div id="user-information" style="width:76px;height:55px"><user-widget login-name="alice" login-password="pwalice"></user-widget></div></div></div>
+ <div style="margin:15px;width:150px;"><div style="float:right"><p>Alice</p><div id="user-information" style="width:76px;height:55px"><las2peer-user-widget login-name="alice" login-password="pwalice"></las2peer-user-widget></div></div></div>
 
 </body>
 </html>
