--- a/components/las2peer-frontend-user-widget/las2peer-frontend-user-widget.html
+++ b/components/las2peer-frontend-user-widget/las2peer-frontend-user-widget.html
@@ -432,6 +432,11 @@ Example:
                 -webkit-box-shadow: 0 0 8px rgba(0, 0, 0, .8);
                 -moz-box-shadow: 0 0 8px rgba(0, 0, 0, .8);
             }
+
+            #dropdown{
+              z-index: 5000;
+            }
+
             .dropdown-content {
                 background-color: white;
                 line-height: 20px;
