--- a/components/las2peer-frontend-user-widget/demo/index.html
+++ b/components/las2peer-frontend-user-widget/demo/index.html
@@ -28,7 +28,7 @@
                 Alice
               </p>
               <div id="user-information" style="width:76px;height:55px">
-                <las2peer-user-widget login-name="alice" login-password="pwalice">
+                <las2peer-user-widget base-url="https://las2peer.dbis.rwth-aachen.de:9098" login-name="alice" login-password="pwalice">
                 </las2peer-user-widget>
               </div>
             </div>
